--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 拉取源码
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # 改为完整克隆，解决VCS问题
+          fetch-depth: 0
 
       - name: 安装Go编译环境
         run: |
@@ -29,69 +29,125 @@ jobs:
           go version
           go env
 
+      - name: 查看目录结构
+        run: |
+          echo "当前目录: $(pwd)"
+          echo "目录内容:"
+          ls -la
+          echo "查找Go项目:"
+          find . -name "go.mod" -o -name "*.go" | head -20
+
       - name: 编译OpenList
         run: |
-          cd /__w/openlist/openlist  # GitHub Actions的标准工作目录
+          # 使用GitHub Actions的标准工作目录
+          WORKDIR="$GITHUB_WORKSPACE"
+          echo "工作目录: $WORKDIR"
+          cd "$WORKDIR"
           
-          # 设置Go模块代理（加速下载）
+          # 设置Go环境
           go env -w GOPROXY=https://goproxy.cn,direct
           go env -w GOSUMDB=off
           
-          # 下载依赖并编译（禁用VCS检查，使用静态编译）
-          CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-          go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
-          -o /app/openlist-alpine-x86_64 ./cmd/openlist
+          # 检查项目结构
+          echo "项目结构:"
+          ls -la
+          
+          # 查找main.go或go.mod
+          if [ -f "go.mod" ]; then
+            echo "找到go.mod文件"
+            cat go.mod | head -5
+            
+            # 查找入口点
+            if [ -f "main.go" ]; then
+              ENTRY="."
+              echo "使用main.go作为入口"
+            elif [ -d "cmd" ]; then
+              # 查找cmd目录下的第一个可执行文件
+              for dir in cmd/*/; do
+                if [ -d "$dir" ] && [ -f "${dir}main.go" ]; then
+                  ENTRY="./${dir%/}"
+                  echo "使用入口: $ENTRY"
+                  break
+                fi
+              done
+            else
+              # 尝试查找包含main函数的go文件
+              ENTRY=$(find . -name "*.go" -type f -exec grep -l "func main()" {} \; | head -1)
+              if [ -n "$ENTRY" ]; then
+                ENTRY=$(dirname "$ENTRY")
+                echo "找到main函数在: $ENTRY"
+              fi
+            fi
+            
+            if [ -n "$ENTRY" ]; then
+              echo "开始编译..."
+              CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+              go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
+              -o /app/openlist-alpine-x86_64 "$ENTRY"
+            else
+              echo "::warning::未找到明确入口，尝试编译整个模块..."
+              CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+              go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
+              -o /app/openlist-alpine-x86_64 ./...
+            fi
+          else
+            echo "::error::未找到go.mod文件"
+            exit 1
+          fi
           
           # 验证编译结果
-          chmod +x /app/openlist-alpine-x86_64
-          file /app/openlist-alpine-x86_64
-          ldd /app/openlist-alpine-x86_64 2>/dev/null || echo "静态编译，无动态依赖"
-
-      - name: 备用编译方式（如果主入口不对）
-        if: failure()
-        run: |
-          cd /__w/openlist/openlist
-          
-          # 查找Go项目的主入口
-          echo "查找Go项目入口点..."
-          find . -name "*.go" -type f | head -20
-          
-          # 尝试不同的入口点
-          if [ -f "./main.go" ]; then
-            echo "找到main.go，尝试编译..."
+          if [ -f "/app/openlist-alpine-x86_64" ]; then
+            chmod +x /app/openlist-alpine-x86_64
+            echo "编译成功！"
+            file /app/openlist-alpine-x86_64
+            ls -lh /app/openlist-alpine-x86_64
+          else
+            echo "::warning::编译未生成可执行文件，尝试其他方式..."
+            # 尝试直接编译所有go文件
             CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
             go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
             -o /app/openlist-alpine-x86_64 .
-          elif [ -d "./cmd" ]; then
-            echo "找到cmd目录，列出可编译目标..."
-            for cmd in ./cmd/*; do
-              if [ -d "$cmd" ]; then
-                echo "尝试编译: $cmd"
-                CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-                go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
-                -o /app/openlist-alpine-x86_64 "$cmd"
-                break
-              fi
-            done
+            
+            if [ -f "/app/openlist-alpine-x86_64" ]; then
+              chmod +x /app/openlist-alpine-x86_64
+              echo "备用编译方式成功！"
+              file /app/openlist-alpine-x86_64
+            fi
           fi
-          
-          if [ -f "/app/openlist-alpine-x86_64" ]; then
-            chmod +x /app/openlist-alpine-x86_64
-            file /app/openlist-alpine-x86_64
-          fi
+
+      - name: 调试模式
+        if: github.event_name == 'workflow_dispatch' && inputs.debug_enabled == true
+        run: |
+          echo "=== 调试信息 ==="
+          echo "环境变量:"
+          env | grep -E "GITHUB|PATH" | sort
+          echo "当前目录: $(pwd)"
+          echo "目录树:"
+          find . -type f -name "*.go" | head -30
+          echo "go.mod内容:"
+          if [ -f "go.mod" ]; then cat go.mod; fi
 
       - name: 产物处理
         run: |
-          # 如果编译成功，处理产物
           if [ -f "/app/openlist-alpine-x86_64" ]; then
+            echo "处理编译产物..."
             strip /app/openlist-alpine-x86_64 2>/dev/null || true
-            tar -zcvf /build/openlist-alpine-x86_64-$(date +%Y%m%d-%H%M%S).tar.gz -C /app .
+            
+            # 创建包含说明文件的包
+            mkdir -p /app-dist
+            cp /app/openlist-alpine-x86_64 /app-dist/
+            echo "OpenList Alpine x86_64 版本" > /app-dist/README.txt
+            echo "编译时间: $(date)" >> /app-dist/README.txt
+            echo "文件信息: $(file /app/openlist-alpine-x86_64)" >> /app-dist/README.txt
+            
+            tar -zcvf /build/openlist-alpine-x86_64-$(date +%Y%m%d-%H%M%S).tar.gz -C /app-dist .
+            
             echo "编译成功！"
-            echo "文件信息:"
-            file /app/openlist-alpine-x86_64
-            echo "文件大小: $(du -h /app/openlist-alpine-x86_64 | cut -f1)"
+            echo "产物大小: $(du -h /build/*.tar.gz | cut -f1)"
           else
             echo "::error::编译失败，未生成可执行文件"
+            # 列出可能的编译输出
+            find /app -type f -name "*" 2>/dev/null || true
             exit 1
           fi
 
