--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,6 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: alpine:3.23
-      options: --privileged
     
     steps:
       - name: Setup Alpine Environment
@@ -42,43 +41,45 @@ jobs:
             make \
             upx
           
-          # 创建必要目录
-          mkdir -p /go/src /go/bin /go/pkg
-          export GOPATH=/go
-          export PATH=$PATH:/go/bin
+          # 创建工作目录
+          mkdir -p /workspace
+          cd /workspace
+
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          path: /workspace/src
 
       - name: Setup Go
         run: |
           apk add --no-cache go gcc g++ musl-dev linux-headers
           go version
-          echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
-          echo "GOBIN=$(go env GOBIN)" >> $GITHUB_ENV
-
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          path: /src
+          
+          # 设置Go环境
+          go env -w GOPROXY=https://proxy.golang.org,direct
+          go env -w GOSUMDB=on
+          go env -w GO111MODULE=on
+          
+          echo "Go setup completed"
 
       - name: Configure Git
         run: |
-          git config --global --add safe.directory /src
+          cd /workspace/src
+          git config --global --add safe.directory /workspace/src
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
       - name: Detect Build Configuration
         id: config
         run: |
-          cd /src
+          cd /workspace/src
           
           # 检查是否为lite版本
           IS_LITE="false"
           if [[ "${{ github.event.inputs.build_type }}" == "lite" ]] || [[ "${{ matrix.build-type }}" == "lite" ]]; then
             IS_LITE="true"
           fi
-          
-          # 检测架构
-          ARCH="x86_64"
           
           # 构建标志
           BUILD_FLAGS="-trimpath -ldflags='-s -w -extldflags \"-static\"' -buildvcs=false"
@@ -87,24 +88,17 @@ jobs:
           fi
           
           echo "is_lite=$IS_LITE" >> $GITHUB_OUTPUT
-          echo "arch=$ARCH" >> $GITHUB_OUTPUT
           echo "build_flags=$BUILD_FLAGS" >> $GITHUB_OUTPUT
           
           echo "Build Configuration:"
           echo "  Type: ${{ github.event.inputs.build_type || 'standard' }}"
           echo "  Lite: $IS_LITE"
-          echo "  Arch: $ARCH"
           echo "  Flags: $BUILD_FLAGS"
 
       - name: Prepare Dependencies
         run: |
-          cd /src
+          cd /workspace/src
           echo "Preparing dependencies..."
-          
-          # 设置Go环境
-          go env -w GOPROXY=https://proxy.golang.org,direct
-          go env -w GOSUMDB=on
-          go env -w GO111MODULE=on
           
           # 下载依赖
           echo "Downloading modules..."
@@ -115,20 +109,19 @@ jobs:
           
           # 显示依赖信息
           echo "Module information:"
-          go list -m all | head -10
+          go list -m all | head -5
 
       - name: Build Binary
         run: |
-          cd /src
+          cd /workspace/src
           
           BUILD_FLAGS="${{ steps.config.outputs.build_flags }}"
-          ARCH="${{ steps.config.outputs.arch }}"
           IS_LITE="${{ steps.config.outputs.is_lite }}"
           
           echo "Building with flags: $BUILD_FLAGS"
           
           # 创建输出目录
-          mkdir -p /build/compress
+          mkdir -p /workspace/build/compress
           
           # 查找主包
           MAIN_PKG="."
@@ -146,93 +139,66 @@ jobs:
           # 构建二进制
           echo "Building from package: $MAIN_PKG"
           CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-          eval "go build $BUILD_FLAGS -o /build/openlist-alpine-$ARCH $MAIN_PKG"
+          eval "go build $BUILD_FLAGS -o /workspace/build/openlist-alpine $MAIN_PKG"
           
           if [ $? -ne 0 ]; then
             echo "::error::Build failed"
             exit 1
           fi
           
-          chmod +x /build/openlist-alpine-$ARCH
+          chmod +x /workspace/build/openlist-alpine
           
           # 文件信息
           echo "Build completed:"
-          file /build/openlist-alpine-$ARCH
-          ls -lh /build/openlist-alpine-$ARCH
+          file /workspace/build/openlist-alpine
+          ls -lh /workspace/build/openlist-alpine
 
       - name: Compress Binary
         run: |
-          cd /build
-          ARCH="${{ steps.config.outputs.arch }}"
+          cd /workspace/build
           IS_LITE="${{ steps.config.outputs.is_lite }}"
+          BUILD_TYPE="${{ github.event.inputs.build_type || 'standard' }}"
           
           # 使用UPX压缩
           if command -v upx &> /dev/null; then
             echo "Compressing binary with UPX..."
-            upx --best --lzma -q /build/openlist-alpine-$ARCH -o /build/compress/openlist-alpine-$ARCH-upx
-            mv /build/compress/openlist-alpine-$ARCH-upx /build/compress/openlist-alpine-$ARCH
+            upx --best --lzma -q /workspace/build/openlist-alpine -o /workspace/build/compress/openlist-alpine-upx
+            mv /workspace/build/compress/openlist-alpine-upx /workspace/build/compress/openlist-alpine
             
             echo "Compression results:"
-            ORIGINAL_SIZE=$(stat -c%s "/build/openlist-alpine-$ARCH")
-            COMPRESSED_SIZE=$(stat -c%s "/build/compress/openlist-alpine-$ARCH")
+            ORIGINAL_SIZE=$(stat -c%s "/workspace/build/openlist-alpine")
+            COMPRESSED_SIZE=$(stat -c%s "/workspace/build/compress/openlist-alpine")
             echo "Original: $ORIGINAL_SIZE bytes"
             echo "Compressed: $COMPRESSED_SIZE bytes"
             echo "Reduction: $((100 - COMPRESSED_SIZE * 100 / ORIGINAL_SIZE))%"
           else
             echo "UPX not available, copying binary..."
-            cp /build/openlist-alpine-$ARCH /build/compress/
+            cp /workspace/build/openlist-alpine /workspace/build/compress/
           fi
           
           # 创建tar.gz包
-          cd /build/compress
-          tar -czf openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz openlist-alpine-$ARCH
+          cd /workspace/build/compress
+          tar -czf openlist-alpine-$BUILD_TYPE.tar.gz openlist-alpine
           
           # 生成校验和
-          sha256sum openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz > openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz.sha256
+          sha256sum openlist-alpine-$BUILD_TYPE.tar.gz > openlist-alpine-$BUILD_TYPE.tar.gz.sha256
           
           echo "Artifacts created:"
-          ls -lh /build/compress/
+          ls -lh /workspace/build/compress/
 
       - name: Upload Artifacts (Push/PR)
         if: github.event_name != 'release'
         uses: actions/upload-artifact@v4
         with:
-          name: openlist-alpine-${{ steps.config.outputs.arch }}-${{ github.event.inputs.build_type || 'standard' }}
-          path: /build/compress/*
+          name: openlist-alpine-${{ github.event.inputs.build_type || 'standard' }}
+          path: /workspace/build/compress/*
           retention-days: 30
 
       - name: Upload Release Assets
         if: github.event_name == 'release'
         uses: softprops/action-gh-release@v2
         with:
-          files: /build/compress/*
+          files: /workspace/build/compress/*
           tag_name: ${{ github.event.release.tag_name }}
           draft: false
           prerelease: false
-          generate_release_notes: false
-
-  # 多架构构建矩阵（可选）
-  alpine-matrix:
-    needs: alpine-build
-    if: github.event_name == 'release'
-    strategy:
-      matrix:
-        arch: [ x86_64, aarch64 ]
-        build-type: [ standard, lite ]
-    name: Alpine ${{ matrix.arch }} ${{ matrix.build-type }}
-    runs-on: ubuntu-latest
-    container:
-      image: alpine:3.23
-      options: --privileged
-    
-    steps:
-      - name: Setup QEMU for multi-arch
-        uses: docker/setup-qemu-action@v3
-    
-      - name: Setup Buildx
-        uses: docker/setup-buildx-action@v3
-    
-      - name: Build for different architectures
-        run: |
-          echo "Building for ${{ matrix.arch }} (${{ matrix.build-type }})"
-          # 这里可以根据需要添加多架构构建逻辑
